--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 /wp-content/index.php
 /wp-content/languages
 /wp-content/plugins/index.php
+/wp-content/plugins/woocommerce
+/wp-content/plugins/all-in-one-wp-migration
+
+
 /wp-content/themes/index.php
 /wp-includes/
 /index.php
